--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Love Your Fate
-subtitle: tell me
+title: Kihong's blog
+subtitle: “What I cannot create, I do not understand.”― Richard P. Feynman.
 ---
